// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Editor adds empty image block when pasting unsupported HTML local image path 1`] = `
"<!-- fin:image -->
<figure class="fin-block-image"><img src="" alt=""/></figure>
<!-- /fin:image -->"
`;

exports[`Editor adds image block when pasting HTML local image path 1`] = `
"<!-- fin:image -->
<figure class="fin-block-image"><img src="file:///path/to/file.png" alt=""/></figure>
<!-- /fin:image -->"
`;

exports[`Editor appends media correctly for allowed types 1`] = `
"<!-- fin:image -->
<figure class="fin-block-image"><img src="https://test-site.files.finpress.com/local-image-1.jpeg" alt=""/></figure>
<!-- /fin:image -->

<!-- fin:image -->
<figure class="fin-block-image"><img src="https://test-site.files.finpress.com/local-image-3.jpeg" alt=""/></figure>
<!-- /fin:image -->"
`;

exports[`Editor appends media correctly for allowed types and skips unsupported ones 1`] = `
"<!-- fin:image -->
<figure class="fin-block-image"><img src="https://test-site.files.finpress.com/local-image-1.jpeg" alt=""/></figure>
<!-- /fin:image -->

<!-- fin:video -->
<figure class="fin-block-video"><video controls src="file:///local-video-4.mp4"></video></figure>
<!-- /fin:video -->"
`;

exports[`Editor on content update parses markdown into blocks 1`] = `
"<!-- fin:paragraph -->
<p>Lorem ipsum dolor sit amet, consectetur adipiscing<br />elit.</p>
<!-- /fin:paragraph -->

<!-- fin:heading -->
<h2 class="fin-block-heading">Overview</h2>
<!-- /fin:heading -->

<!-- fin:list -->
<ul class="fin-block-list"><!-- fin:list-item -->
<li>Lorem ipsum dolor sit amet</li>
<!-- /fin:list-item -->

<!-- fin:list-item -->
<li>Consectetur adipiscing<br>elit</li>
<!-- /fin:list-item -->

<!-- fin:list-item -->
<li>Integer nec odio</li>
<!-- /fin:list-item --></ul>
<!-- /fin:list -->

<!-- fin:heading -->
<h2 class="fin-block-heading">Details</h2>
<!-- /fin:heading -->

<!-- fin:list {"ordered":true} -->
<ol class="fin-block-list"><!-- fin:list-item -->
<li>Sed cursus ante dapibus diam</li>
<!-- /fin:list-item -->

<!-- fin:list-item -->
<li>Nulla quis sem at nibh elementum imperdiet</li>
<!-- /fin:list-item -->

<!-- fin:list-item -->
<li>Duis sagittis ipsum <code>## Mixed Lists</code></li>
<!-- /fin:list-item --></ol>
<!-- /fin:list -->

<!-- fin:list -->
<ul class="fin-block-list"><!-- fin:list-item -->
<li>Key Points:</li>
<!-- /fin:list-item --></ul>
<!-- /fin:list -->

<!-- fin:list {"ordered":true} -->
<ol class="fin-block-list"><!-- fin:list-item -->
<li>Lorem ipsum dolor sit amet</li>
<!-- /fin:list-item -->

<!-- fin:list-item -->
<li><br>Consectetur adipiscing elit</li>
<!-- /fin:list-item -->

<!-- fin:list-item -->
<li>Integer nec odio</li>
<!-- /fin:list-item --></ol>
<!-- /fin:list -->

<!-- fin:list -->
<ul class="fin-block-list"><!-- fin:list-item -->
<li>Additional Info:<br>-<br>Sed cursus ante dapibus diam</li>
<!-- /fin:list-item -->

<!-- fin:list-item -->
<li>Nulla quis sem at nibh elementum imperdiet</li>
<!-- /fin:list-item --></ul>
<!-- /fin:list -->"
`;
